# RealTime-Event-Pipeline

./: .dockerignore  Dockerfile  README.md  check_db_data.py  config.example.env  docker-compose.yml  docker-entrypoint.sh  main_consumer.py  main_producer.py  pyproject.toml  real_time_pipeline_vector.drawio
RealTime-Event-Pipeline/: 001_initial_schema.sql  Readme.txt  docker-compose.yml
RealTime-Event-Pipeline/data/zoo-1/data/version-2/: snapshot.100000000
RealTime-Event-Pipeline/data/zoo-2/data/version-2/: snapshot.0  snapshot.20000006c
RealTime-Event-Pipeline/data/zoo-3/data/version-2/: snapshot.0  snapshot.10000004c  snapshot.30000000e  snapshot.300000028  snapshot.400000193  snapshot.5000001e2  snapshot.6000001aa  snapshot.7000001d1  snapshot.8000001cb  snapshot.900000074  snapshot.b00000002
RealTime-Event-Pipeline/grafana/dashboards/: pipeline_dashboard.json
RealTime-Event-Pipeline/prometheus/: alert_rules.yml  prometheus.yml
data/zoo-3/data/version-2/: snapshot.a000001a4  snapshot.b000001aa
grafana/dashboards/: pipeline_dashboard.json
prometheus/: prometheus.yml
src/: __init__.py  config.py
src/consumer/: aggregator.py  kafka_consumer.py  transformer.py
src/monitoring/: alerts.py  metrics.py
src/producer/: __init__.py  kafka_producer.py  simulator.py
src/storage/: __init__.py  database.py  models.py
tests/: test_kafka_produce_consume.py
